--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,8 @@
-name: Greeting
-on: push
+name: Deploy
+on: [push, workflow_dispatch]
 jobs:
   greet:
     runs-on: ubuntu-latest
     steps: 
       - name: "Print"
         run: echo "Hello world!"
-
-       
-
-
-
