--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,12 @@
 name: Deploy
 on: [push, workflow_dispatch]
 jobs:
-  greet:
-    runs-on: ubuntu-latest
+  test:
+    runs-on: ubuntu:latest
     steps: 
-      - name: "Print"
-        run: echo "Hello world!"
+      - name: get code
+        run: |
+          echo " cloning repo"
+          echo "${{toJson(github)}}"
+          git clone https://github.com/${{github.repository}}.git
+          
