--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,11 +2,10 @@ name: Deploy
 on: [push, workflow_dispatch]
 jobs:
   test:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     steps: 
       - name: get code
         run: |
           echo " cloning repo"
           echo "${{toJson(github)}}"
           git clone https://github.com/${{github.repository}}.git
-          
