--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,15 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: get code
-        run: |
-          echo " cloning repo"
-          echo "${{toJson(github)}}"
-          git clone https://github.com/${{github.repository}}.git
+        uses: actions/checkout@v4.2.2
+      - name: install node jobs
+        uses: actions/setup-node@v4.2.2
+        with: 
+          node-version: '20'
+
+      - name: print node node-version
+        run: node -v
+      - name: Install Dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm run test
