--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,9 +12,25 @@ jobs:
         with: 
           node-version: '20'
 
-      - name: print node node-version
-        run: node -v
+#      - name: print node node-version
+#        run: node -v
       - name: Install Dependencies
         run: npm ci
       - name: Run tests
         run: npm run test
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code 
+        uses: actions/checkout@v4.2.2
+      - name: Install node js
+        uses: actions/setup-node@v3.9.1
+        with:
+          node-version: '20'
+      - name: install Dependencies
+        run: npm ci
+      - name: Build Project
+        run: npm run Build
+      - name: deploy
+        run: echo "Deploy Successfull"
+         
