--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,12 @@
 name: Deploy
-on: [push, workflow_dispatch]
+on: 
+  push:
+    branches:
+         - main
+    paths-ignore:
+      - '.github/workflows/*' 
+      - README.md  
+  
 # jobs for steps
 jobs:
   test:
@@ -11,9 +18,6 @@ jobs:
         uses: actions/setup-node@v3.9.1
         with: 
           node-version: '20'
-
-#      - name: print node node-version
-#        run: node -v
       - name: cache
         uses: actions/cache@v4
         with:
